client/src/style.css
@font-face {
    font-family: IL;
    src: url(./fonts/Inter-Light.ttf);
}
@font-face {
    font-family: IR;
    src: url(./fonts/Inter-Regular.ttf);
}
@font-face {
    font-family: IM;
    src: url(./fonts/Inter-Medium.ttf);
}
@font-face {
    font-family: IB;
    src: url(./fonts/Inter-Bold.ttf);
}
@font-face {
    font-family: IBl;
    src: url(./fonts/Inter-Black.ttf);
}
@font-face {
    font-family: IEL;
    src: url(./fonts/Inter-ExtraLight.ttf);
}
.IL{
    font-family: IL;
}
.IR{
    font-family: IR;
}
.IM{
    font-family: IM;
}
.IB{
    font-family: IB;
}
.IBl{
    font-family: IBl;
}
.IEL{
    font-family: IEL;
}
body{
    margin: 0px;
    font-family: IR;
}
.center__wrapper{
    padding: 10px;
    margin: 0px auto;
    max-width: 1300px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
button{
    border: none;
    background: none;
    cursor: pointer;
    border-radius: 5px;
    transition: all 0.2s;
    font-size: 17px;
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    font-family: IM;
}
input{
    outline: none;
}
div{
    border-radius: 5px;
}
header{
    z-index: 1;
    position: sticky;
    top: -1px;
    width: 100%;
    height: 55px;
    background: rgb(255, 255, 255);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
main{
    margin-top: 30px;
    width: 100%;
    min-height: 600px;
    
    /* background: lightblue; */
}
.main__page{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}
.FS_20{
    font-size: 20px;
}
footer{
    width: 100%;
    height: 200px;
    border-top: #0762C4 5px solid;
    margin-top: 200px;
}
.head__nav{
    min-width: 35%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.head__nav__actions{
    margin-right: 20px;
    display: flex;
    gap: 25px;
}
.head__nav__login{
    min-width: 40%;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}
.logo{
    width: auto;
}

.fake__button{
    border-radius: 5px;
    display: flex;
    align-items: center;
    font-family: IM;
    justify-content: center;
    text-decoration: none;
    transition: all 0.3s;
}
.sign__button{
    /* border: 1px #000000 solid; */
    background: #2592ff;
    color: white;
    height: 45px;
    width: 60%;
}
.sign__button:hover{
    border-radius: 50px;
}
.catalogue__search__wrapper{
    width: 100%;
    height: 360px;
    background-image: url('searchpic2.jpg');
    background-position: top -90px right 0px;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.catalogue__search__block{
    height: 55px;
    width: 50%;
    margin-left: 30px;
    display: flex;
    gap: 30px;
}
.catalogue__button{
    background: white;
    width: 35%;
    
}
.search{
    background: white;
    width: 100%;
    display: flex;
    align-items: center;
    padding: 5px;
}
.search input{
    margin-left: 10px;
    padding: 0;
    width: 100%;
    height: 80%;
    border: none;
    border-radius: 5px;
    font-size: 20px;
}
.search__button{
    width: 15%;
    height: 100%;
    background: #0762C4;
}
.catalogue__button div{
    display: flex;
    align-items: center;
    gap: 5px;
    font-size: 16px;
    /* font-weight: 600; */
    font-family: IB;
}
.sign__page{
    border-radius: 0%;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background: #064283;
    z-index: 2;
    display: flex;
    padding-top: 30px;
    display: flex;
    flex-direction: column;
    background-image: url(./pages/figura.svg);
    background-repeat: no-repeat;
    overflow-y: scroll;
}
.signup__background{
    background-image: url(./pages/figura2.svg);
    background-position: bottom -100px right 0px;;
}
.sign__form{
    border-radius: 20px;
    background: white;
    width: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 40px;
    padding-bottom: 50px;
}
.sign__form h1{
    font-family: IEL;
    font-size: 60px;
    padding: 0;
    letter-spacing: 5px;
}
.header__logo{
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}
.sign__form__inputs{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    gap: 55px;
}
.sign__desc__block{
    width: 40%;
    color: white;
    font-size: 22px;
}
.sign__form__block{
    width: 40%;
    display: flex;
    align-items: center;
    flex-direction: column;
}
.sign__two__blocks{
    margin-top: 50px;
    width: 100%;
    display: flex;
    justify-content: space-around;
    padding-bottom: 70px;
}
.sign__input{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 0%;
    width: 75%;
    height: 70px;
    background: rgb(247, 247, 247);
    box-shadow: 0px 5px 0px rgb(0, 85, 255);
}
.sign__input input{
    width: 90%;
    height: 100%;
    border: none;
    background: none;
    font-size: 22px;
}
.profile__wrapper{
    display: flex;
    flex-direction: row;
    
}
.profile__info{
    height: 100%;
    max-width: 25%;
    background: rgb(255, 255, 255);
    display: flex;
    flex-direction: column;
    align-items: center;
}
.profile__story{
    width: 70%;
}
.avatar{
    border-radius: 50%;
    width: 300px;
    height: 300px;
    background: rgb(235, 235, 235);
}
.profile__info__text{
    font-size: 25px;
}
.edit__button{
    width: 100%;
    height: 40px;
    border: 2px solid #0762C4;
}
.edit__button:hover{
    background: #0762C4;
    color: white;
}
.edit__info__block input{
    border: #426a94 solid 2px;
    border-radius: 5px;
    font-size: 25px;
    padding: 5px;
}
.edit__buttons__block{
    display: flex;
    gap: 30px;
}
.save__button{
    background: #0762C4;
    color: white;
    height: 40px;
    width: 40%;
}
.cancel__button{
    background: #7d7d7d;
    color: white;
    height: 40px;
    width: 30%;
}
.logout__button{
    margin-top: 100px;
    color: #7d7d7d;
}
.actions{
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    gap: 20px;
}
.action__card{
    border-radius: 5px;
    min-width: 280px;
    max-width: 280px;
    height: 300px;
    background: #0e45db;
    overflow: hidden;
    transition: all 0.2s;
    position: relative;
}
.action__card img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    opacity: 0.7;
    transition: all 0.2s;
    z-index: 1;
}
.action__card:hover{
    border-radius: 20px;
}
.action__card:hover img{
    opacity: 0.3;
    transform: scale(1.2);
}
.action__card:hover .action__card__title{
    background: none;
}
.action__card__title{
    position: absolute;
    bottom: 80px;
    left: 10px;
    font-size: 25px;
    z-index: 2;
    color: white;
    background: #0e45db;
    padding: 10px;
    transition: all 0.2s;
}
.action__card__desc{
    z-index: 2;
    position: absolute;
    bottom: 20px;
    font-size: 17px;
    opacity: 0;
    left: 10px;
    padding: 10px;
    color: white;
    transition: all 0.2s;
}
.action__card:hover .action__card__desc{
    opacity: 1;
}
.create__org__page{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.org__form{
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 40%;
}
.org__form__item{
    display: flex;
    flex-direction: column;
    gap: 10px;
    font-size: 20px;
}
.org__form__item input, textarea{
    font-size: 20px;
    padding: 5px;
    border: #064283 2px solid;
    border-radius: 5px;
    font-family: IM;
}
.business__wrapper{
    display: flex;
    flex-direction: column;
}
.business__add{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.add__button{
    width: 150px;
    height: 50px;
    background: #0762C4;
    color: white;
}
.create__product__wrapper{
    display: flex;
    flex-direction: column;
}
.create__product{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.create__product__form{
    min-width: 320px;
    width: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.product__preview{
    min-width: 320px;
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 600px;
}
.product__card{
    border-radius: 0%;
    border-bottom: 4px #465565 solid;
    width: 350px;
    max-height: 500px;
    overflow: hidden;
    /* background: rgb(203, 203, 203); */
    display: flex;
    flex-direction: column;
    padding-bottom: 5px;
}
.product__img{
    width: 100%;
    height: 350px;
}
.product__img img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.product__card__actions{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.shadow{
    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.12);
}
.product__card__info{
    height: 150px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.add__to__cart{
    width: 50%;
    height: 50px;
    background: #465565;
    color: white;
}
.create__product__form form{
    width: 80%;
    display: flex;
    flex-direction: column;

}

